--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h4><em>Programming student</em></h4>
   </div>
 
-  <p> Studying programming and web development at the <strong><a href="https://somosfit.org/images/faq-youfit.pdf">Youfit</a></strong> program. 💛 Technology</p>
+  <p class="description"> Studying programming and web development at the <strong><a href="https://somosfit.org/images/faq-youfit.pdf">Youfit</a></strong> program. 💛 Technology</p>
 
 <div class: "Books">
   <h3>Books and Teaching</h3>
